2007-01-17 Niklas Knutsson  <nq@altern.org>

	* Fix crash when expression entry reclaims focus if compiled with optimizations

2006-11-18 Niklas Knutsson  <nq@altern.org>

	* Update Swedish translation

2006-11-12 Niklas Knutsson  <nq@altern.org>

	* Update Dutch translation (Jaap Woldringh <jjh.woldringh@planet.nl>)

2006-11-07 Niklas Knutsson  <nq@altern.org>

	* Update Dutch translation (Jaap Woldringh <jjh.woldringh@planet.nl>)

2006-11-02 Niklas Knutsson  <nq@altern.org>

	* Connect "Exp" button Exp RPN operation and add Ctrl+Shift+E shortcut

2006-09-05 Niklas Knutsson  <nq@altern.org>

	* Integer factorization

2006-07-16 Niklas Knutsson  <nq@altern.org>

	* Remove use of libgnomeui completely as gtk_window_set_default_icon_from_file() can be used instead

2006-07-15 Niklas Knutsson  <nq@altern.org>

	* Add --with-libgnome and --with-libgnomeui configure options
	* Add accelerator keys to widgets in units, functions, and variables dialogs

2006-07-14 Niklas Knutsson  <nq@altern.org>

	* Add accelerators to all dialog buttons and expanders
	* Fix set unknowns in RPN mode
	* Fix compile without libgnomeui

2006-07-03 Niklas Knutsson  <nq@altern.org>

	* Make separate options for "Sort Minus Last" and "Negative Exponents" in numerical display menu
	* Do not save equal signs for parse history and do not save "RPN Register Moved" as text
	* Do not put numerator in parenthesis in (1/2)/m, with "Place Units Separately" activated
	* Increment version number

2006-06-19 Niklas Knutsson  <nq@altern.org>

	* Use localized comma for insert matrix/vector
	* Display parentheses correctly with flat division when "Place units separately" is activated
	* Fix insert matrix/vector dialog

2006-06-10 Niklas Knutsson  <nq@altern.org>

	* Add "Engineering" display mode

2006-06-01 Niklas Knutsson  <nq@altern.org>

	* Polishing before 0.9.4 release

2006-04-28 Niklas Knutsson  <nq@altern.org>

	* Fix function editing with subfunctions

2006-04-23 Niklas Knutsson  <nq@altern.org>
