@@ -1,3 +1,11 @@
+2007-04-16 Niklas Knutsson  <nq@altern.org>
+
+	* Always input decimal separator sign on keypad separator press
+
+2007-03-21 Niklas Knutsson  <nq@altern.org>
+
+	* Minor documentation fixes
+
 2007-01-17 Niklas Knutsson  <nq@altern.org>
 
 	* Fix crash when expression entry reclaims focus if compiled with optimizations
